VO: Don't force window position in X11 VOs
Disable by default the code that forcefully moved the video output
window to the middle of the screen whenever it was reconfigured or
created. That behavior was really annoying when switching video
streams within a file, and overriding the window manager like that is
not good default behavior for the initial creation of a window either.
Add a new option "-force-window-position" that can be used to restore
the old behavior.

--- a/DOCS/man/en/mplayer.1
+++ b/DOCS/man/en/mplayer.1
@@ -3055,6 +3055,13 @@ VESA framebuffer does not support mode changing.
 Override framebuffer mode configuration file (default: /etc/\:fb.modes).
 .
 .TP
+.B \-force\-window\-position
+Forcefully move MPlayer's video output window to default location whenever
+there is a change in video parameters, video stream or file.
+This used to be the default behavior.
+Currently only affects X11 VOs.
+.
+.TP
 .B \-fs (also see \-zoom)
 Fullscreen playback (centers movie, and paints black bands around it).
 Not supported by all video output drivers.
