--- a/DOCS/man/en/mplayer.1
+++ b/DOCS/man/en/mplayer.1
@@ -865,10 +865,12 @@ Enqueue files given on the command line in the playlist instead of playing them
 immediately.
 .
 .TP
-.B \-fixed\-vo
-Enforces a fixed video system for multiple files (one (un)initialization for
-all files).
+.B \-nofixed\-vo
+\-fixed\-vo enforces a fixed video system for multiple files (one
+(un)initialization for all files).
 Therefore only one window will be opened for all files.
+Now enabled by default, use \-nofixed\-vo to disable and create a new window
+whenever the video stream changes.
 Currently the following drivers are fixed-vo compliant: gl, gl2, mga, svga, x11,
 xmga, xv, xvidix and dfbmga.
 .
