Add option -noordered-chapters.

--- a/DOCS/man/en/mplayer.1
+++ b/DOCS/man/en/mplayer.1
@@ -1071,6 +1071,11 @@ Turns off LIRC support.
 .B \-nomouseinput
 Disable mouse button press/\:release input (mozplayerxp's context menu relies
 on this option).
+.TP
+.B \-noorderedchapters
+Disable support for Matroska ordered chapters.
+MPlayer will not load or search for video segments from other files,
+and will also ignore any chapter order specified for the main file.
 .
 .TP
 .B \-rtc (RTC only)
