Use light autohinting by default in libass
FreeType's native hinter causes rendering errors with many fonts,
especially with broken fonts that unfortunately tend to be used a
lot with SSA/ASS subtitles.  Use the light autohinter for unscaled
OSD by default to avoid these problems.

--- a/DOCS/man/en/mplayer.1
+++ b/DOCS/man/en/mplayer.1
@@ -2097,7 +2097,7 @@ The same, but hinting will only be performed if the OSD is rendered at
 screen resolution and will therefore not be scaled.
 .RE
 .RSs
-The default value is 7 (use native hinter for unscaled OSD and no hinting otherwise).
+The default value is 5 (use light hinter for unscaled OSD and no hinting otherwise).
 .RE
 .PD 1
 .
